// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access Tokens store should match snapshot for creating access token for account 1`] = `
Object {
  "text": "
                SELECT \\"account_id\\" FROM \\"oauth2_access_tokens\\"
                WHERE
                    \\"account_id\\"!=$1 AND
                    \\"account_id\\" NOT LIKE '%_demo' AND
                    \\"tenant_id\\"=$2
            ",
  "values": Array [
    "acc_id",
    "tenant_id",
  ],
}
`;

exports[`Access Tokens store should match snapshot for creating access token for account 2`] = `
Object {
  "text": "
                INSERT INTO \\"oauth2_access_tokens\\" (
                    \\"account_id\\",
                    \\"user_id\\",
                    \\"tenant_id\\",
                    \\"token_set\\"
                )
                VALUES ($1, $2, $3, $4)
                ON CONFLICT (\\"account_id\\")
                DO
                    UPDATE SET
                        \\"user_id\\" = $2,
                        \\"tenant_id\\" = $3,
                        \\"token_set\\" = $4,
                        \\"updated_at\\" = now();
            ",
  "values": Array [
    "acc_id",
    "user_id",
    "tenant_id",
    Object {
      "access_token": "token",
    },
  ],
}
`;

exports[`Access Tokens store should match snapshot for deleting access token for tenant 1`] = `
Object {
  "text": "
                DELETE FROM \\"oauth2_access_tokens\\"
                WHERE \\"tenant_id\\"=$1
            ",
  "values": Array [
    "tenant_id",
  ],
}
`;

exports[`Access Tokens store should match snapshot for getting access token for account 1`] = `
Object {
  "text": "
                SELECT * FROM \\"oauth2_access_tokens\\"
                WHERE \\"account_id\\"=$1
            ",
  "values": Array [
    "acc_id",
  ],
}
`;
